# Benchmark-RuleShift

./: .env.example  .gitignore  AGENTS.md  Dockerfile.kaggle-local  KAGGLE_BENCHMARK_CONTRACT.md  LICENSE  Makefile  README.md  benchmark_design_section_cognitive_flexibility.md  benchmark_result.json  docker-compose.kaggle-local.yml  iron_find_electric_implementation_spec.md  iron_find_electric_improved_plan.md  pyproject.toml  requirements-dev.txt  v1_readiness_checklist.md
.github/workflows/: cd-kaggle.yml  ci.yml  deploy-kaggle-dataset.yml  deploy-kaggle-notebook.yml  deploy-kaggle-orchestrator.yml  deploy-kaggle.yml
data/: public_leaderboard_rows.json
docs/: kaggle-full-run-checklist.md  local-kaggle-validation.md  public-leaderboard-freeze.md
kaggle/: kernel-metadata.json  ruleshift_notebook_task.ipynb
kaggle/dataset/: audit_key.json
kaggle/notebook/: cogflex_notebook_task.ipynb  kernel-metadata.json  ruleshift_notebook_task.ipynb
packaging/kaggle/: BENCHMARK_CARD.md  DEPLOY_RUNBOOK.md  KAGGLE_BENCHMARK_CONTRACT.md  PACKAGING_NOTE.md  PRIVATE_SPLIT_RUNBOOK.md  README.md  dataset-metadata.json  frozen_artifacts_manifest.json  iron_find_electric_v1_kaggle_staging.ipynb  kernel-metadata.json  ruleshift_benchmark_v1_kbench.ipynb  ruleshift_notebook_task.ipynb
reports/: ARTIFACT_POLICY.md  README.md  m1_binary_vs_narrative_robustness_report.json  m1_binary_vs_narrative_robustness_report.md  m1_binary_vs_narrative_robustness_report__20260322_211021.md  p0_contract_audit__20260325_010239.json  private_split_separation_repair_report.md
reports/legacy/: LEGACY_NOTE.md
scripts/: __init__.py  _package_build.py  _private_builder.py  bootstrap_kaggle_local.sh  build_cogflex_dataset.py  build_deploy.py  build_kaggle.py  build_kernel_package.py  build_private_cogflex_dataset.py  build_private_dataset_artifact.py  build_ruleshift_dataset.py  build_runtime_dataset_package.py  build_test_cogflex_dataset.py  check_public_private_isolation.py  deploy_dataset.sh  deploy_notebook.sh  deploy_private_dataset.sh  deploy_test_dataset.sh  deploy_web.sh  evidence_pass.py  ife.py  pre_deploy_check.sh  preflight_kaggle.py  private_cogflex_bundle.py  private_local_loader.py  private_release_paths.py  release_check.sh  update_kaggle_manifest_hashes.py  update_manifest_hashes.py  verify_cogflex.py  verify_ruleshift.py
src/: README.md  audit.py  baselines.py  generator.py  kaggle.py  metrics.py  parser.py  private_split.py  protocol.py  render.py  rules.py  schema.py  splits.py  validate.py
tests/: cogflex_fixtures.py  conftest.py  kbench_shim.py  test_anthropic_panel.py  test_audit.py  test_baselines.py  test_build_kaggle.py  test_cd_build.py  test_cli.py  test_cogflex_dataset_generation.py  test_cogflex_identifiability.py  test_cogflex_notebook_runtime.py  test_cogflex_verification.py  test_contract_audit.py  test_episode_ledger.py  test_gemini_panel.py  test_gemini_provider.py  test_generator.py  test_intra_family_comparison.py  test_invariance.py  test_kaggle_execution.py  test_kaggle_payload.py  test_kbench_notebook.py  test_metrics.py  test_model_runner.py  test_notebook.py  test_openai_panel.py  test_openai_provider.py  test_packaging.py  test_panel_runner.py  test_parser.py  test_pipeline.py  test_pre_deploy_check.py  test_preflight_kaggle.py  test_private_release_paths.py  test_private_split.py  test_protocol.py  test_provider_registry.py  test_release_hygiene.py  test_remote_verification.py  (+16 more)
web/: index.html  package-lock.json  package.json  tsconfig.json
(+150 files in other folders)
