[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ruleshift-benchmark"
version = "0.0.0"
description = "Local benchmark tooling for RuleShift Benchmark."
requires-python = ">=3.11"
dependencies = [
]

[project.optional-dependencies]
gemini = [
  "google-genai>=1,<2",
]
anthropic = [
  "anthropic>=0.40,<1",
]
openai = [
  "openai>=1.0,<2",
]

[project.scripts]
ruleshift-benchmark = "core.cli:entrypoint"
ruleshift-benchmark-test = "core.cli:test_entrypoint"
ruleshift-benchmark-validity = "core.cli:validity_entrypoint"
ruleshift-benchmark-reaudit = "core.cli:reaudit_entrypoint"
ruleshift-benchmark-integrity = "core.cli:integrity_entrypoint"
ruleshift-benchmark-evidence-pass = "core.cli:evidence_pass_entrypoint"
ruleshift-benchmark-contract-audit = "core.cli:contract_audit_entrypoint"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["core*", "tasks*"]
