[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ruleshift-benchmark"
version = "0.0.0"
description = "Local benchmark tooling for RuleShift Benchmark."
requires-python = ">=3.11"
dependencies = [
]

[project.scripts]
ruleshift-benchmark = "core.cli:entrypoint"
ruleshift-benchmark-test = "core.cli:test_entrypoint"
ruleshift-benchmark-validity = "core.cli:validity_entrypoint"
ruleshift-benchmark-reaudit = "core.cli:reaudit_entrypoint"
ruleshift-benchmark-integrity = "core.cli:integrity_entrypoint"
ruleshift-benchmark-evidence-pass = "core.cli:evidence_pass_entrypoint"
ruleshift-benchmark-contract-audit = "core.cli:contract_audit_entrypoint"
ruleshift-benchmark-doctor = "core.cli:doctor_entrypoint"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"scripts/cd/build_private_dataset_package.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_strict_optional = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["core*", "tasks*"]
