[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ruleshift-benchmark"
version = "0.0.0"
description = "Local benchmark tooling for RuleShift Benchmark."
requires-python = ">=3.11"
dependencies = [
]

[project.scripts]
ruleshift-benchmark = "maintainer.cli:entrypoint"
ruleshift-benchmark-test = "maintainer.cli:test_entrypoint"
ruleshift-benchmark-validity = "maintainer.cli:validity_entrypoint"
ruleshift-benchmark-reaudit = "maintainer.cli:reaudit_entrypoint"
ruleshift-benchmark-integrity = "maintainer.cli:integrity_entrypoint"
ruleshift-benchmark-evidence-pass = "maintainer.cli:evidence_pass_entrypoint"
ruleshift-benchmark-contract-audit = "maintainer.cli:contract_audit_entrypoint"
ruleshift-benchmark-doctor = "maintainer.cli:doctor_entrypoint"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"scripts/cd/build_private_dataset_package.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_strict_optional = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["core*", "maintainer*", "tasks*"]
